Implemented minimum FBO size on the ShaderEffectSource.

Task-number: QTBUG-20193

Change-Id: I45020c094c4a4892c055700f084fde7b219cdc10
Reviewed-on: http://codereview.qt.nokia.com/2972
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Gunnar Sletta <gunnar.sletta@nokia.com>